	Fixed bug where the font size and font family listboxes wasn't updated correctly on Safari.
	Fixed bug where the height of the fieldset in default image dialog for the advanced theme was to small.
	Fixed bug where the font sizes behaved incorrectly after a cleanup on Safari.
	Fixed bug where formatblock didn't work correctly in Safari on some elements.
	Fixed so the media icon gets active when a media element is selected.
Version 3.0a3 (2007-11-13)
	Added new experimental jQuery and Prototype framework adapters to the development package.
	Added new translation.html file for the development package. Helps with the internationalization of TinyMCE.
	Added new setup callback option, use this callback to add events to TinyMCE. This method is recommended over the old callbacks.
	Added new API documetation to all classes, functions, events, properties to the Wiki with examples etc.
	Added new init method to all plugins and themes, since it's shorter to write and it mimics interface capable languages better.
	Fixed various CSS issues in the default skin such as alignment of split buttons and separators.
	Fixed issues with mod_security. It didn't like that a content type of text/javascript was forced in a XHR.
	Fixed all events so that they now pass the sender object as it's first argument.
	Fixed some DOM methods so they now can take an array as input.
	Fixed so addButton and the methods of the ControlManager uses less arguments and it now uses a settings object instead.
	Fixed various issues with the tinymce.util.URI class.
	Fixed bug in IE and Safari and the on demand gzip loading feature.
	Fixed bug with moving inline windows sometimes failed in IE6.
	Fixed bug where save_callback function wasn't executed at all.
	Fixed bug where inlinepopups produces scrollbars if windows where moved to the corners of the browser.
	Fixed bug where view HTML source failed when inserting a embedded media object.
	Fixed bug where the listbox menus didn't display correctly on IE6.